# bad-deed-validator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  api.py  conftest.py  main.py  pyproject.toml  requirements.txt
deed_validator/: __init__.py  enrichment.py  exceptions.py  extractor_llm.py  extractor_regex.py  models.py  pipeline.py  validators.py  word_to_number.py
tests/: test_api.py  test_validators.py
